Fix title collapse when resizing window

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1168,3 +1168,9 @@ div.box.box1 {
     color: #aaaaaa;
     font-weight: normal;
 }
+
+@media (max-width:768px) {
+    .navbar-brand {
+        width:70vw!important;
+    }
+}
